<package>
  <name>turtlebot_demo</name>
  <version>0.0.1</version>
  <description>differential_drive_gazebo</description>
  <maintainer email="joe@joemcm.com">Joe McMahon</maintainer>
  <license>MIT</license>
  <author  email="joe@joemcm.com">Joe McMahon</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>
</package>
