<package>
  <name>turtlebot_demo</name>
  <version>0.0.1</version>
  <description>differential_drive_gazebo</description>
  <maintainer email="joe@joemcm.com">Joe McMahon</maintainer>
  <license>MIT</license>
  <author  email="joe@joemcm.com">Joe McMahon</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
</package>
